# moss

./: .gitignore  .pre-commit-config.yaml  .~lock.ecosystms_output.csv#  CONTRIBUTING.md  README.md  import-db-neo4j  index.html  main.py  mkdocs.yml  pyproject.toml
docs/: gen_ref_pages.py
frontends/moss-react-app/: package-lock.json  package.json
hex/biz_logic/: __init__.py
hex/biz_logic/harvest/: endpoint.py  harvest_crud_types.py
hex/biz_logic/scripts/jring_o/: import-db-aura  import-db-neo4j
hex/persistence/: db_session.py
hex/persistence/neo4j_docker/: README.md  docker-compose.override.yml  env-example
hex/scripts/jring_o/: ecosyst.ms-api.py
neo4j-docker/: README.md  docker-compose.yml
python-scripts/: ecosyst.ms-api.py
scripts/: README.md  ecosyst.ms-api.py  ecosystms_output.csv  import-db-neo4j
scripts/repo_citation_graphing/: README.md  repo_cite
scripts/repo_finder/: README.md  repofinder.py
security/: database.py
src/backend/administration/: __init__.py
src/backend/biz_logic/: __init__.py
src/backend/biz_logic/bottle/: __init__.py
src/backend/biz_logic/harvest/: __init__.py  endpoint.py  status.py
src/backend/biz_logic/mix/: __init__.py
src/backend/biz_logic/scripts/jring_o/repo_cite/: README.md  repo_cite.py
src/backend/biz_logic/scripts/jring_o/repo_finder/: oaont.json
src/backend/persistence/: db_session.py
src/backend/persistence/db_models/: base.py  ontology.py  relationships.py
src/backend/persistence/neo4j_docker/: docker-compose.yml
src/frontends/: index.html
src/frontends/moss-react-app/src/: App.jsx
src/moss/lib/: config.py
src/moss/lib/models/: nodes.py
tests/: __init__.py
