[project]
name = "MOSS"
version = "0.1.0"
description = "Map of Open Source Science"
authors = [
    {name = "eyermt", email = "eyermt@gmail.com"},
    {name = "dgiltz", email = "giltzdeclan@gmail.com"},
]
dependencies = [
    "neo4j>=5.24.0",
    "click>=8.1.7",
    "pydantic>=2.9.2",
    "neomodel[extras]>=5.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.ruff]
line-length = 88
lint.select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
lint.ignore = [
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"



[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=7.1.1",
    "ruff>=0.6.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings[python]>=0.26.1",
]

[tool.pdm.scripts]
format = "ruff format ."
